# kde-runtime

./: CMakeLists.txt
drkonqi/: CMakeLists.txt  crashedapplication.cpp  crashedapplication.h  debugger.cpp  drkonqibackends.cpp  main.cpp
drkonqi/data/debuggers/internal/: gdbrc
drkonqi/kdbgwin/: common.h  mingw_generator.cpp  process.h
kcontrol/: CMakeLists.txt
kioslave/: CMakeLists.txt
